# devsecops-gadhittana

./: .bandit  .gitleaks.toml  SECURITY.md  pyproject.toml
.github/workflows/: ci-cd.yml
